Add timeline and new link

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
   </aside>
 
   <nav>
-    <a href="https://www.youtube.com/watch?v=3nz5HkUJaVU" target="_blank" class="memory">
+    <a href="https://www.youtube.com/watch?v=7r77SocMOIA" target="_blank" class="memory">
       <small>15 de Maio de 2023</small>
       <h1>Show me the code</h1>
       <div>
@@ -50,7 +50,7 @@
         Características de um Dev Padawan: Curiosidade, foco, prática, participar da comunidade.
       </p>
     </a>
-    <a href="https://www.youtube.com/watch?v=3nz5HkUJaVU" target="_blank" class="memory">
+    <a href="https://www.youtube.com/watch?v=7r77SocMOIA" target="_blank" class="memory">
       <small>16 de Maio de 2023</small>
       <h1>Build the future</h1>
       <div>
@@ -67,24 +67,24 @@
         Características de um Dev Padawan: Não desistir, pesquisar, buscar ajuda e ajudar.
       </p>
     </a>
-    <a href="https://www.youtube.com/watch?v=3nz5HkUJaVU" target="_blank" class="memory">
+    <a href="https://www.youtube.com/watch?v=7r77SocMOIA" target="_blank" class="memory">
       <small>17 de Maio de 2023</small>
       <h1>Never stop learning</h1>
       <div>
         <img src="./assets/redimido.jpg" alt="Darth Vader sem capacete antes de morrer com Luke" />
       </div>
       <p>Chegamos na metade do caminho, nossa jornada aqui está quase acabando, mas ainda temos alguns ensinamentos para
-        aprender. <br /> <br />
+        aprender. <br /><br />
         Utilizamos o Grid Layout para dividir o layout do nosso site como se fosse uma tabela, ele possui linhas e
         colunas.
         <br /><br />
-        Foram abordados: Grid Layout (aplicado no body) ; Importando background e logo; Adicionando foto e nome do
+        Foram abordados: Grid Layout (aplicado no body); Importando background e logo; Adicionando foto e nome do
         usuário;
-        Tags: img, h1, p e spam; Habilitamos o scroll apenas em um lado da página. <br /><br />
+        Tags: img, h1, p e span; Habilitamos o scroll apenas em um lado da página. <br /><br />
         Características de um Dev Padawan: Comprometimento, dominar fundamentos, saber se posicionar profissionalmente.
       </p>
     </a>
-    <a href="https://www.youtube.com/watch?v=3nz5HkUJaVU" target="_blank" class="memory">
+    <a href="https://www.youtube.com/watch?v=7r77SocMOIA" target="_blank" class="memory">
       <small>18 de Maio de 2023</small>
       <h1>Next level week</h1>
       <div>
@@ -106,7 +106,34 @@
         Características de um Dev Padawan: Ter hard skills, mas principalmente soft skills.
       </p>
     </a>
+    <a href="https://www.youtube.com/watch?v=7r77SocMOIA" target="_blank" class="memory">
+      <small>19 de Maio de 2023</small>
+      <h1>Explorer</h1>
+      <div>
+        <img src="./assets/mestres-jedi.jpg"
+          alt="Rodrigo e Mayk apresentando o evento Jornada do Zero à Primeira Vaga" />
+      </div>
+      <p>Chegamos ao grande final da nossa jornada, mas lembre-se: nunca é um final! <br /><br />
+        Por último e não menos importante, aprendemos a trabalhar com Git e Github. Aprendemos como iniciar o Git no
+        projeto
+        (git init), adicionar todos os arquivos modificados ao stage (git add .) e criar um ponto na história (git
+        commit -m
+        “initial commit”). <br /><br />
+        Finalmente entendemos como criar um repositório no Github, adicionando e enviando o projeto para o repositório
+        remoto.
+        Criamos um novo ponto na história, sendo ele o README e fazendo um commit pela própria interface do VSCode.
+        <br /><br />
+        Publicamos nosso projeto, para ficar disponível e ser acessado de qualquer lugar. :) <br /><br />
+        Git, é uma ferramenta de controle de versões. Github é uma plataforma online para colocar seus códigos
+        utilizando Git.
+        <br /><br />
+        Foram abordados: Git (branch: linha do tempo, commit: pontos na história, stage área: preparado que será enviado
+        para o
+        ponto na história); Github; README. <br /><br />
+        Características de um Dev Padawan: Constância. <br /><br />
 
+      </p>
+    </a>
   </nav>
 </body>
 
