--- a/index.html
+++ b/index.html
@@ -130,8 +130,7 @@
         Foram abordados: Git (branch: linha do tempo, commit: pontos na história, stage área: preparado que será enviado
         para o
         ponto na história); Github; README. <br /><br />
-        Características de um Dev Padawan: Constância. <br /><br />
-
+        Características de um Dev Padawan: Constância.
       </p>
     </a>
   </nav>
